--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -5,7 +5,7 @@
 <head profile="http://www.w3.org/2006/03/hcard http://dublincore.org/documents/2008/08/04/dc-html/">
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
 
-  <title>ACVP Symmetric Cipher JSON Specification</title>
+  <title>ACVP Symmetric Algorithm JSON Specification</title>
 
   <style type="text/css" title="Xml2Rfc (sans serif)">
   /*<![CDATA[*/
@@ -355,6 +355,7 @@
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction"/>
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
+<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported Symmetric Algorithms"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
@@ -375,8 +376,8 @@
   <meta name="dct.creator" content="Foley, J., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsym-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6-17" />
-  <meta name="dct.abstract" content="This document defines the JSON schema for using symmetric ciphers with the ACVP specification." />
-  <meta name="description" content="This document defines the JSON schema for using symmetric ciphers with the ACVP specification." />
+  <meta name="dct.abstract" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
+  <meta name="description" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
 
 </head>
 
@@ -406,13 +407,13 @@
     </tbody>
   </table>
 
-  <p class="title">ACVP Symmetric Cipher JSON Specification<br />
+  <p class="title">ACVP Symmetric Algorithm JSON Specification<br />
   <span class="filename">draft-ietf-acvp-subsym-00</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
 </h1>
-<p>This document defines the JSON schema for using symmetric ciphers with the ACVP specification.</p>
+<p>This document defines the JSON schema for using symmetric algorithms with the ACVP specification.</p>
 <h1 id="rfc.status">
   <a href="#rfc.status">Status of This Memo</a>
 </h1>
@@ -434,6 +435,7 @@
   	<li>1.   <a href="#rfc.section.1">Introduction</a></li>
 <li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 <li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
+<li>2.1.   <a href="#rfc.section.2.1">Supported Symmetric Algorithms</a></li>
 <li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
@@ -455,21 +457,12 @@
 <h1 id="rfc.section.1.1"><a href="#rfc.section.1.1">1.1.</a> Requirements Language</h1>
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a></h1>
-<p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities.  This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  This section describes the constructs for advertising support of symmetric ciphers to the ACVP server.</p>
-<p id="rfc.section.2.p.2">The following symmetric ciphers may be advertised by the ACVP crypto module:</p>
-<p/>
-
-<ul>
-  <li>AES</li>
-  <li>DES</li>
-  <li>TBD...</li>
-</ul>
-<p id="rfc.section.2.p.4">The symmetric cipher capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each symmetric cipher capability advertised is a self-contained JSON object.  The following JSON values are used for symmetric cipher capabilities:</p>
+<p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities.  This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  This section describes the constructs for advertising support of symmetric algorithms to the ACVP server.</p>
+<p id="rfc.section.2.p.2">The symmetric algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each symmetric algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for symmetric algorithm capabilities:</p>
 <div id="rfc.table.1"/>
 <div id="caps_table"/>
-<p>These values are used within the capabilities advertisement JSON object.  </p>
 <table cellpadding="3" cellspacing="0" class="tt full center">
-  <caption>Symmetric Cipher Capabilities JSON Values</caption>
+  <caption>Symmetric Algorithm Capabilities JSON Values</caption>
   <thead>
     <tr>
       <th class="left">JSON Value</th>
@@ -482,9 +475,9 @@
   <tbody>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The symmetric cipher and mode to be validated.</td>
+      <td class="left">The symmetric algorithm and mode to be validated.</td>
       <td class="left">value</td>
-      <td class="left">AES-EBC, AES-CBC, AES-CTR, AES-GCM, AES-CCM, AES-WRAP, DES-EBC, DES-DBC</td>
+      <td class="left">See <a href="#supported_algs">Section 2.1</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -510,40 +503,54 @@
     </tr>
     <tr>
       <td class="left">ivgen</td>
-      <td class="left">IV generation method for AEAD ciphers</td>
+      <td class="left">IV generation method for AEAD algorithms</td>
       <td class="left">value</td>
       <td class="left">internal, external</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">ivgenmode</td>
-      <td class="left">IV generation mode for AEAD ciphers</td>
+      <td class="left">IV generation mode for AEAD algorithms</td>
       <td class="left">value</td>
       <td class="left">8.2.1</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">aadlen</td>
-      <td class="left">The supported AAD lengths in bits for AEAD ciphers</td>
+      <td class="left">The supported AAD lengths in bits for AEAD algorithms</td>
       <td class="left">array</td>
       <td class="left">0-264</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">taglen</td>
-      <td class="left">The supported Tag lengths in bits for AEAD ciphers</td>
+      <td class="left">The supported Tag lengths in bits for AEAD algorithms</td>
       <td class="left">array</td>
       <td class="left">0-264</td>
       <td class="left">Yes</td>
     </tr>
   </tbody>
 </table>
+<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported Symmetric Algorithms</a></h1>
+<p id="rfc.section.2.1.p.1">The following symmetric algorithms may be advertised by the ACVP compliant crypto module:</p>
+<p/>
+
+<ul>
+  <li>AES-EBC</li>
+  <li>AES-CBC</li>
+  <li>AES-CTR</li>
+  <li>AES-GCM</li>
+  <li>AES-CCM</li>
+  <li>AES-WRAP</li>
+  <li>DES-EBC</li>
+  <li>DES-CTR</li>
+  <li>TBD</li>
+</ul>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual crypto algorithm, such as AES-EBC, AES-CBC, AES-CTR, AES-GCM, DES-CBC, DES-CTR, etc.  This section describes the JSON schema for a test vector set used with symmetric crypto algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.  The following table describes the JSON elements at the top level of the hierarchy.  </p>
 <div id="rfc.table.2"/>
 <div id="vs_top_table"/>
-<p>Top-level JSON elements in vector set.</p>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set JSON Object</caption>
   <thead>
@@ -566,7 +573,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The symmetric cipher and mode used for the test vectors</td>
+      <td class="left">The symmetric algorithm and mode used for the test vectors.  See <a href="#supported_algs">Section 2.1</a> for possible values.</td>
       <td class="left">value</td>
     </tr>
     <tr>
@@ -576,16 +583,15 @@
     </tr>
     <tr>
       <td class="left">test_groups</td>
-      <td class="left">Array of JSON objects that represent each group of test vectors</td>
+      <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> Test Groups JSON Schema</h1>
+<h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
 <p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the JSON elements of the Test Group JSON object.</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table"/>
-<p>Test Group JSON elements</p>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Group JSON Object</caption>
   <thead>
@@ -629,17 +635,16 @@
     </tr>
     <tr>
       <td class="left">tests</td>
-      <td class="left">Array of individual test vector JSON objects</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
       <td class="left">array</td>
       <td class="left">No</td>
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> Test Vectors JSON Schema</h1>
+<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each test vector.</p>
 <div id="rfc.table.4"/>
 <div id="vs_tc_table"/>
-<p>Test Case JSON elements</p>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
   <thead>
@@ -673,7 +678,13 @@
       <td class="left">pt</td>
       <td class="left">Plaintext to use</td>
       <td class="left">value</td>
-      <td class="left">No</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">ct</td>
+      <td class="left">Ciphertext to use</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">aad</td>
@@ -681,10 +692,45 @@
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
+    <tr>
+      <td class="left">tag</td>
+      <td class="left">Tag to use for AEAD algorithms</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
+    </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.p.1">TBD</p>
+<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
+<div id="rfc.table.5"/>
+<div id="vr_top_table"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Vector Set Response JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">acv_version</td>
+      <td class="left">Protocol version identifier</td>
+      <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left">vs_id</td>
+      <td class="left">Unique numeric identifier for the vector set</td>
+      <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left">test_results</td>
+      <td class="left">Array of JSON objects that represent each test vector result, which uses the same JSON schema as defined in <a href="#tvjs">Section 3.2</a> </td>
+      <td class="left">array</td>
+    </tr>
+  </tbody>
+</table>
 <h1 id="rfc.section.5"><a href="#rfc.section.5">5.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
 <p id="rfc.section.5.p.1">TBD...</p>
 <h1 id="rfc.section.6"><a href="#rfc.section.6">6.</a> <a href="#IANA" id="IANA">IANA Considerations</a></h1>
