Add all the CAVS supported symmetric algorithms.  Updated valid values for capabilities registration.  Added sample vector response in appendix C.

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -375,7 +375,7 @@
 
   <meta name="dct.creator" content="Foley, J., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsym-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-6-17" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
 
@@ -396,10 +396,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">June 17, 2016</td>
+  <td class="right">June 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: December 19, 2016</td>
+  <td class="left">Expires: December 3, 2016</td>
   <td class="right"></td>
 </tr>
 
@@ -420,7 +420,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on December 19, 2016.</p>
+<p>This Internet-Draft will expire on December 3, 2016.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -488,18 +488,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left">keylen</td>
+      <td class="left">The supported key lengths in bits</td>
+      <td class="left">array</td>
+      <td class="left">128, 168, 192, 256</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
       <td class="left">ptlen</td>
       <td class="left">The supported plaintext lengths in bits</td>
       <td class="left">array</td>
-      <td class="left">0-1024</td>
+      <td class="left">0-65536</td>
       <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">ivlen</td>
       <td class="left">The supported IV lengths in bits</td>
       <td class="left">array</td>
-      <td class="left">0-128</td>
-      <td class="left">No</td>
+      <td class="left">8-1024</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">ivgen</td>
@@ -512,25 +519,26 @@
       <td class="left">ivgenmode</td>
       <td class="left">IV generation mode for AEAD algorithms</td>
       <td class="left">value</td>
-      <td class="left">8.2.1</td>
+      <td class="left">8.2.1, 8.2.2</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">aadlen</td>
       <td class="left">The supported AAD lengths in bits for AEAD algorithms</td>
       <td class="left">array</td>
-      <td class="left">0-264</td>
+      <td class="left">0-65536</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">taglen</td>
       <td class="left">The supported Tag lengths in bits for AEAD algorithms</td>
       <td class="left">array</td>
-      <td class="left">0-264</td>
+      <td class="left">4, 6, 8, 10, 12, 14, 16, 32, 64, 96, 104, 112, 120, 128</td>
       <td class="left">Yes</td>
     </tr>
   </tbody>
 </table>
+<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  For example, AES-GCM requires ivlen, ivgen, ivgenmode, aadlen and taglen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported Symmetric Algorithms</a></h1>
 <p id="rfc.section.2.1.p.1">The following symmetric algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
@@ -538,13 +546,24 @@
 <ul>
   <li>AES-EBC</li>
   <li>AES-CBC</li>
+  <li>AES-OFB</li>
+  <li>AES-CFB1</li>
+  <li>AES-CFB8</li>
+  <li>AES-CFB128</li>
   <li>AES-CTR</li>
   <li>AES-GCM</li>
   <li>AES-CCM</li>
-  <li>AES-WRAP</li>
-  <li>DES-EBC</li>
-  <li>DES-CTR</li>
-  <li>TBD</li>
+  <li>AES-XTS</li>
+  <li>AES-KW</li>
+  <li>AES-KWP</li>
+  <li>TDES-EBC</li>
+  <li>TDES-CBC</li>
+  <li>TDES-CFB1</li>
+  <li>TDES-CFB8</li>
+  <li>TDES-CFB64</li>
+  <li>TDES-OFB</li>
+  <li>TDES-CTR</li>
+  <li>TDES-KW</li>
 </ul>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual crypto algorithm, such as AES-EBC, AES-CBC, AES-CTR, AES-GCM, DES-CBC, DES-CTR, etc.  This section describes the JSON schema for a test vector set used with symmetric crypto algorithms.</p>
@@ -907,6 +926,87 @@
             </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for test results sent from the crypto module to the ACVP server.</p>
+<pre>
+                {
+                    "acv_version": "0.2",
+                    "vs_id": 1564,
+                    "test_results": [
+                        {
+                            "tc_id": 2171,
+                            "iv": "01020304C077A707E56C22AC",
+                            "ct": "",
+                            "tag": "53B15E85E377F8B5B6BFC2DE915FD622"
+                        },
+                        {
+                            "tc_id": 2172,
+                            "iv": "01020304D666587803BCBAD7",
+                            "ct": "",
+                            "tag": "E7B1F2D77D82C6EB3C9CEFF16C376D9C"
+                        },
+                        {
+                            "tc_id": 2173,
+                            "iv": "01020304D3B09894BB14B6CF",
+                            "ct": "",
+                            "tag": "DFF22B329AC87B82726EBBF20E66EEE2"
+                        },
+                        {
+                            "tc_id": 2174,
+                            "iv": "01020304D678FBCC2EA341A2",
+                            "ct": "",
+                            "tag": "BAFBFA38AD5D6C6E7C97D08DDEC26580"
+                        },
+                        {
+                            "tc_id": 2186,
+                            "iv": "01020304C6A745B0C4C9F2D5",
+                            "ct": "",
+                            "tag": "429FD5A0DAB344EF69B594A44CCAD3EB"
+                        },
+                        {
+                            "tc_id": 2187,
+                            "iv": "010203043E56946A9C9E18D7",
+                            "ct": "",
+                            "tag": "7DA8BA92D64071909972395C981C4567"
+                        },
+                        {
+                            "tc_id": 2201,
+                            "iv": "0102030479FD178FEB555D99",
+                            "ct": "FA2AF4B01BA610DE3A3EDE0B88946E2D",
+                            "tag": "3E77B921DB447F541EB5CC508D74CE4E"
+                        },
+                        {
+                            "tc_id": 2202,
+                            "iv": "01020304C70FB9D3B9E1E329",
+                            "ct": "568028D34EA82E8D30D1A3B952849A70",
+                            "tag": "3D20D5935D6D37F6EE82FE0D2C7006F8"
+                        },
+                        {
+                            "tc_id": 2203,
+                            "iv": "010203040D66A6EEA797B757",
+                            "ct": "B2E10E2ECEC9FC3477841D3AED6469DB",
+                            "tag": "DEF33A719333CAADE8002752922EC124"
+                        },
+                        {
+                            "tc_id": 2204,
+                            "iv": "010203045B6CDA4B5CA26883",
+                            "ct": "CF72C75B4E550AEA535750D6B16393DF",
+                            "tag": "370D1175CF36A72585F20B379D064BCF"
+                        },
+                        {
+                            "tc_id": 2205,
+                            "iv": "010203041E9FD60F49957FF5",
+                            "ct": "A1F124EE6E98CAB776CCD601B7F65D6A",
+                            "tag": "F4D7D0D75FC9961A12B3C6A3E6379972"
+                        },
+                        {
+                            "tc_id": 2206,
+                            "iv": "0102030474CBC83C647DBEAF",
+                            "ct": "2CE1129D3E2F25468A9EE13ED39C902C",
+                            "tag": "48F3D4D7EB4B9FCB924ACC05B3834F98"
+                        }
+                    ]
+                }
+
+            </pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
 </h1>
