updates hash/mac schema

--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -519,6 +519,13 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left">outbyte</td>
+      <td class="left">Implementation only outputs  byte-oriented messages</td>
+      <td class="left">value</td>
+      <td class="left">yes, no</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
       <td class="left">inlen</td>
       <td class="left">Minimum input length</td>
       <td class="left">value</td>
@@ -557,25 +564,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">keysize1</td>
-      <td class="left">If IUT supports key sizes(KS) less than Block size(BS), enter 2 distinct key sizes (in Bytes).</td>
+      <td class="left">keyrange1</td>
+      <td class="left">If IUT supports key sizes(KS) less than Block size(BS), enter 2 distinct key sizes (in Bytes). If IUT only supports one KS less than BS, enter a single size in the array and do not pass keyrange2 or keyblock field.</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
-      <td class="left">No</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">keysize2</td>
-      <td class="left">If IUT supports key sizes(KS) greater than Block size(BS), enter 2 distinct key sizes (in Bytes).</td>
+      <td class="left">keyrange2</td>
+      <td class="left">If IUT supports key sizes(KS) greater than Block size(BS), enter 2 distinct key sizes (in Bytes). If IUT only supports one KS greater than BS, enter the size in the array and do not pass keyrange1 or keyblock field.</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
-      <td class="left">No</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">keyblock</td>
       <td class="left">Implementation supports keysize equal blocksize</td>
       <td class="left">value</td>
       <td class="left">yes, no</td>
-      <td class="left">No</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">maclen</td>
@@ -670,14 +677,8 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">mlen</td>
-      <td class="left">Length of message or seed to hash</td>
-      <td class="left">value</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left">Msg</td>
-      <td class="left">Message or Seed to hash</td>
+      <td class="left">type</td>
+      <td class="left">Type of test: short, long or MonteCarlo</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -746,7 +747,7 @@
     </tr>
     <tr>
       <td class="left">msg</td>
-      <td class="left">Value of the message</td>
+      <td class="left">Value of the message or seed</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
