--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -378,7 +378,7 @@
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported Hash Algorithms"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported HMAC Algorithms"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported MAC Algorithms"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
@@ -399,8 +399,8 @@
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subhashmac-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
-  <meta name="dct.abstract" content="This document defines the JSON schema for using hash and HMAC algorithms with the ACVP specification." />
-  <meta name="description" content="This document defines the JSON schema for using hash and HMAC algorithms with the ACVP specification." />
+  <meta name="dct.abstract" content="This document defines the JSON schema for using hash and MAC algorithms with the ACVP specification." />
+  <meta name="description" content="This document defines the JSON schema for using hash and MAC algorithms with the ACVP specification." />
 
 </head>
 
@@ -436,7 +436,7 @@
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
 </h1>
-<p>This document defines the JSON schema for using hash and HMAC algorithms with the ACVP specification.</p>
+<p>This document defines the JSON schema for using hash and MAC algorithms with the ACVP specification.</p>
 <h1 id="rfc.status">
   <a href="#rfc.status">Status of This Memo</a>
 </h1>
@@ -459,7 +459,7 @@
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Supported Hash Algorithms</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Supported HMAC Algorithms</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">Supported MAC Algorithms</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
@@ -477,7 +477,7 @@
   </ul>
 
   <h1 id="rfc.section.1"><a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module.  The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more.  The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation.  A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms.  This sub-specification defines the JSON constructs for testing hash and HMAC crypto algorithms using ACVP.</p>
+<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module.  The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more.  The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation.  A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms.  This sub-specification defines the JSON constructs for testing hash and MAC crypto algorithms using ACVP.</p>
 <h1 id="rfc.section.1.1"><a href="#rfc.section.1.1">1.1.</a> Requirements Language</h1>
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a></h1>
@@ -541,11 +541,11 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Each HMAC algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for HMAC algorithm capabilities:</p>
+<p id="rfc.section.2.p.3">Each MAC algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for MAC algorithm capabilities:</p>
 <div id="rfc.table.2"/>
 <div id="caps_table2"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
-  <caption>HMAC Algorithm Capabilities JSON Values</caption>
+  <caption>MAC Algorithm Capabilities JSON Values</caption>
   <thead>
     <tr>
       <th class="left">JSON Value</th>
@@ -558,7 +558,7 @@
   <tbody>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The HMAC algorithm and mode to be validated.</td>
+      <td class="left">The MAC algorithm and mode to be validated.</td>
       <td class="left">value</td>
       <td class="left">See <a href="#supported_algs2">Section 2.2</a></td>
       <td class="left">No</td>
@@ -588,12 +588,42 @@
       <td class="left">maclen</td>
       <td class="left">The supported mac sizes in bytes. (range dependent on SHA size)</td>
       <td class="left">array</td>
-      <td class="left">10, 12, 16, 20, 24, 32, 40, 48, 56, 64</td>
+      <td class="left">0-65536</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">inempty</td>
+      <td class="left">Implementation does not accept Null (zero-length) messages</td>
+      <td class="left">value</td>
+      <td class="left">yes, no</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">msglen</td>
+      <td class="left">The CMAC message lengths supported</td>
+      <td class="left">array</td>
+      <td class="left">0-65536</td>
+      <td class="left">Yes</td>
     </tr>
   </tbody>
 </table>
 <p id="rfc.section.2.p.4">Note: Some optional values are required depending on the algorithm.  For example, SHA-1 requires inbyte, inempty, inlen, and outlen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.p.5">Maclen for CMAC contains an array of 3 values defined by these rules:</p>
+<p/>
+
+<ul>
+  <li>The smallest CMAC length supported</li>
+  <li>A second CMAC length supported</li>
+  <li>The largest CMAC length supported</li>
+</ul>
+<p id="rfc.section.2.p.7">Msglen for CMAC contains an array of 5 values defined by these rules:</p>
+<p/>
+
+<ul>
+  <li>Two message lengths divisible by block size</li>
+  <li>Two message lengths NOT divisible by block size</li>
+  <li>The largest message length supported</li>
+</ul>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported Hash Algorithms</a></h1>
 <p id="rfc.section.2.1.p.1">The following hash algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
@@ -613,7 +643,7 @@
   <li>SHAKE-128</li>
   <li>SHAKE-256</li>
 </ul>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_algs2" id="supported_algs2">Supported HMAC Algorithms</a></h1>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_algs2" id="supported_algs2">Supported MAC Algorithms</a></h1>
 <p id="rfc.section.2.2.p.1">The following hash algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
@@ -623,6 +653,10 @@
   <li>HMAC-SHA-256</li>
   <li>HMAC-SHA-384</li>
   <li>HMAC-SHA-512</li>
+  <li>CMAC-AES-128</li>
+  <li>CMAC-AES-192</li>
+  <li>CMAC-AES-256</li>
+  <li>CMAC-TDES</li>
 </ul>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual crypto algorithm, such as SHA-1, SHA-224, SHA-256, etc.  This section describes the JSON schema for a test vector set used with hash crypto algorithms.</p>
@@ -780,6 +814,12 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left">type</td>
+      <td class="left">CMAC type of test, generation or verification</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
       <td class="left">keylen</td>
       <td class="left">Length of key in bytes to use</td>
       <td class="left">value</td>
@@ -790,6 +830,18 @@
       <td class="left">Value of the key</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">key2</td>
+      <td class="left">Value of the key</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">key3</td>
+      <td class="left">Value of the key</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">msg</td>
@@ -882,6 +934,17 @@
                 "maclen": [20],
             }
             </pre>
+<p id="rfc.section.A.p.3">The following is a example JSON object advertising support for CMAC-TDES.</p>
+<pre>
+
+
+            {
+                "algorithm": "CMAC-TDES",
+                "inempty": "yes",
+		"maclen" : [0, 8],
+		"msglen" : [0, 32, 15, 31, 40]
+            }
+            </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is a example JSON object for secure hash test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
@@ -908,7 +971,7 @@
                   ]
                 }
             </pre>
-<p id="rfc.section.B.p.2">The following is a example JSON object for message authentication test vectors sent from the ACVP server to the crypto module.</p>
+<p id="rfc.section.B.p.2">The following is a example JSON object for HMAC test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
                   "acv_version": "0.2",
@@ -935,6 +998,39 @@
                   ]
                 }
             </pre>
+<p id="rfc.section.B.p.3">The following is a example JSON object for CMAC test vectors sent from the ACVP server to the crypto module.</p>
+<pre>
+                {
+                  "acv_version": "0.2",
+                  "vs_id": 1566,
+                  "algorithm": "CMAC-TDES",
+                  "test_groups": [
+                    {
+                      "type": "gen",
+                      "tests": [
+                        {
+                          "tc_id": 2175,
+                          "keylen": 3,
+			  "maclen" : 5,
+                          "key": "c479f813ad1a45d5",
+                          "key2": "dc43459da4c85e85",
+                          "key3": "1cda518af886bf1f",
+                          "msg": "00"
+                        },
+                        {
+                          "tc_id": 2176,
+                          "keylen": 3,
+			  "maclen" : 5,
+                          "key": "731331866754588f",
+                          "key2": "d332ef51e0ce1925",
+                          "key3": "d586cba70440f44f",
+                          "msg": "00"
+                        }
+                      ]
+                    },
+                  ]
+                }
+            </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for secure hash test results sent from the crypto module to the ACVP server.</p>
 <pre>
@@ -954,7 +1050,7 @@
                 }
 
             </pre>
-<p id="rfc.section.C.p.2">The following is a example JSON object for message authentication test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.C.p.2">The following is a example JSON object for HMAC test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
                     "acv_version": "0.2",
@@ -967,6 +1063,23 @@
                        {
                             "tc_id": 2173,
                             "mac": "feb3ff7b06eb7f62e9d19c331abbe2d183d2bc7a"
+                       }
+                    ]
+                }
+            </pre>
+<p id="rfc.section.C.p.3">The following is a example JSON object for CMAC test results sent from the crypto module to the ACVP server.</p>
+<pre>
+                {
+                    "acv_version": "0.2",
+                    "vs_id": 1566,
+                    "test_results": [
+                        {
+                            "tc_id": 2175,
+                            "mac": "fea01c84a7"
+                        },
+                       {
+                            "tc_id": 2176,
+                            "mac": "164bdb8582"
                        }
                     ]
                 }
