--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -564,6 +564,27 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left">aesval</td>
+      <td class="left">The AES validation number or implemented in same implementation(CMAC).</td>
+      <td class="left">value</td>
+      <td class="left">same or value /&gt;</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">shaval</td>
+      <td class="left">The SHA validation number or implemented in same implementation(HMAC).</td>
+      <td class="left">value</td>
+      <td class="left">same or value /&gt;</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">tdesval</td>
+      <td class="left">The TDES validation number or implemented in same implementation(CMAC).</td>
+      <td class="left">value</td>
+      <td class="left">same or value /&gt;</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
       <td class="left">keyrange1</td>
       <td class="left">If IUT supports key sizes(KS) less than Block size(BS), enter 2 distinct key sizes (in Bytes). If IUT only supports one KS less than BS, enter a single size in the array and do not pass keyrange2 or keyblock field.</td>
       <td class="left">array</td>
