--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -567,21 +567,21 @@
       <td class="left">aesval</td>
       <td class="left">The AES validation number or implemented in same implementation(CMAC).</td>
       <td class="left">value</td>
-      <td class="left">same or value /&gt;</td>
+      <td class="left">same or value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">shaval</td>
       <td class="left">The SHA validation number or implemented in same implementation(HMAC).</td>
       <td class="left">value</td>
-      <td class="left">same or value /&gt;</td>
+      <td class="left">same or value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left">tdesval</td>
       <td class="left">The TDES validation number or implemented in same implementation(CMAC).</td>
       <td class="left">value</td>
-      <td class="left">same or value /&gt;</td>
+      <td class="left">same or value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
